İlk html dosyası veritabanından veri eklenerek oluşturuldu

--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hoş Geldiniz</title>
 </head>
 <body>
-
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
 </body>
 </html>
